--- a/_posts/2022-05-13-PQ-薪水照領還發獎金-新制教召優待條例三讀通過.html
+++ b/_posts/2022-05-13-PQ-薪水照領還發獎金-新制教召優待條例三讀通過.html
@@ -20,7 +20,7 @@ author: Salima
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345.jpg" alt="" class="wp-image-101238" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>立法院會13日三讀通過後備軍人召集優待條例，民眾接受教召，並完成訓練達5次者，自第5次起每次完成訓練將發召集獎金。圖為3月陸軍第八軍團砲兵營在台南進行14天教召訓練。圖／中央社</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345.jpg" alt="" class="wp-image-101238" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/7cc393aa-1152x768_727714232345-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>立法院會13日三讀通過後備軍人召集優待條例，民眾接受教召，並完成訓練達5次者，自第5次起每次完成訓練將發召集獎金。圖為3月陸軍第八軍團砲兵營在台南進行14天教召訓練。圖／中央社</figcaption></figure>
 
 
 
