--- a/_posts/2022-05-13-VOCUS-4350-miles-德國-德勒斯登.html
+++ b/_posts/2022-05-13-VOCUS-4350-miles-德國-德勒斯登.html
@@ -11,22 +11,22 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">我所前進的每一哩路，皆源自於人們的善意。</div>
 <div class="draft-block draft--p left">在搭便車整整等了兩天，終於成功離開柏林，抵達德勒斯登之後的隔天早晨，我躺在客棧床上，厭世的不想退房。但這裡的房前一晚要價650台幣，直逼我一天的旅行預算。</div>
 <div class="draft-block draft--p left">我賴到最後一刻，心不甘情不願地起床收拾行李。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/43544c64-e428-49d8-8207-dc34484cf91d.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登車站</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/43544c64-e428-49d8-8207-dc34484cf91d.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登車站</figcaption></div>
 <div class="draft-block draft--p left">到車站買了Sim卡，卻不會開卡。輾轉來到電信行請人幫忙，一位挪威大叔店員接過我的護照，幫我上網申請註冊完成後，說因為要審核，可能大約要等一天才會開通。臨走前竟與我開玩笑說：「你覺得我真的幫你解決問題了嗎？」好像要我不要相信他似的，奇怪的幽默感。</div>
 <div class="draft-block draft--p left">原本想出去賣唱，在街上逛了一圈，炎熱的天氣卻讓人提不起勁。逛了一陣子沒發現適合的擺攤地點，決定先回客棧休息，跟在德國留學的朋友聯絡，之後上網買了明天凌晨的車票，打算前往慕尼黑，到對方家裡叨擾安頓身心。</div>
 <div class="draft-block draft--p left">傍晚背上行李離開客棧，往城市的另一邊走去，巧遇了一場音樂會，氣氛頗像台中爵士音樂節，台上唱著德文的女伶，歌聲聽來是如此美妙。我卸下背包，與當地人一同坐在草皮上仔細聆聽。夜漸深，風很涼爽，草皮上到處是人，圓一個美好的夏夜。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/4fd5a556-ce36-42c0-b9b2-6e7c09168bfd.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登的草皮戶外音樂會</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/4fd5a556-ce36-42c0-b9b2-6e7c09168bfd.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登的草皮戶外音樂會</figcaption></div>
 <div class="draft-block draft--p left">感覺都還沒能聽個過癮，音樂會便已驟然結束。我走到附近沒有路燈的地方，把行李都綁在一起，也沒搭起帳篷，便把行李當枕頭，睡起了大頭覺。一小時後，突然一陣很不尋常的風吹來。風在黑暗中狂舞著，我看著遠方的天空發現正在打雷，心想不妙。趕緊開始收拾，走到了橋上，卻發現仍有好多人逗留。直覺告訴我，現在是擺攤的好時機。</div>
 <div class="draft-block draft--p left">我在橋上迅速拿出吉他唱了起來，瞬間便有人停下聆聽拍照打賞。可惜好景不常，兩首歌後雨便開始滴落，只能趕快收拾行囊，躲到了建築物底下。建築物底下一開始躲著許多人，看他們聊得不亦樂乎，想必是音樂會帶來的好心情。</div>
 <div class="draft-block draft--p left">直到雨變得稀稀落落，大家一哄而散，最後只剩下我與街友老伯。我猜想這裡大概是專屬於他的避雨空間，他從容地哼著歌，沒有任何愁容。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/3bdbceef-9dd8-41df-8909-ff4cd01720e5.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">雨後的德勒斯登街景</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/3bdbceef-9dd8-41df-8909-ff4cd01720e5.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">雨後的德勒斯登街景</figcaption></div>
 <div class="draft-block draft--p left">是啊，一個人是否快樂，並不是他的生活品質如何，而是他的內心世界發生了什麼。我在旅途中，在不知不覺中，驗證了這件事好多好多次。</div>
 <div class="draft-block draft--p left">雨小到可以離開後，我與並未開口與之對話的老伯道別，過了橋找到了麥當勞，在那逗留了一小時，才又走了很長的路，找尋能紮營的地方，在凌晨四點睡去。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/f4e59fb1-26c4-44aa-9c73-a0ea86667c93.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/f4e59fb1-26c4-44aa-9c73-a0ea86667c93.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">隔天早上，醒在Dresden某個公園的樹叢裡，雖然一早開始就一直陸續聽到人聲，但實際上沒有任何人來打擾。手機依舊不能上網，今天是週日，嘗試走去電信行，不意外地沒有營業。之後我又走回昨天入住的客棧，在客棧外面的草皮用著網路。</div>
 <div class="draft-block draft--p left">中午時去超市買了披薩麵包跟橙汁果腹，試著在車站外頭擺攤，身體莫名地開始燃燒，昨晚賣唱的鮮活感，此刻又回到了身上。</div>
 <div class="draft-block draft--p left">夾雜回客棧外頭休息，在車站唱了3小時，才在晚上8點前去吃了披薩當晚餐，之後慢慢走到昨天賣唱的橋上，一邊看著夕落，一邊等著遠方的音樂祭典緩緩落幕，繼續開始擺攤唱著，唱給音樂會沒能聽過癮的青年，唱給返家心情愉悅的婦人，唱給自己仍在燃燒的心。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/b6809d28-5a58-4a12-a5e8-a88417a134b7.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登的傍晚與河景</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/b6809d28-5a58-4a12-a5e8-a88417a134b7.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">德勒斯登的傍晚與河景</figcaption></div>
 <div class="draft-block draft--p left">沒多久，一家三口的台灣人經過橋上，注意到我的牌子。我唱起了島嶼天光，媽媽給我鼓勵支持，之後又繼續唱了長途夜車。許久沒能唱歌給台灣人聽，唱起台語歌也特別投入，樂聲讓德勒斯登的橋上，都成了我們四人的故鄉。</div>
 <div class="draft-block draft--p left">爸爸聽完歌，二話不說掏出錢給我。我看到那張鈔票的金額，嚇了一跳說：「這樣太多了啦。」</div>
 <div class="draft-block draft--p left">爸爸只是笑著，沒有說上什麼，堅持把鈔票遞給我。我鞠躬感謝，望著他們慢慢走遠。再唱過幾首歌，我收了攤，結算起今天一整天的打拼。爸爸的慷慨加上白天的奮鬥，今天竟是一整年來收入最高的一天。</div>
@@ -34,4 +34,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">我告訴自己只是想多了，穩穩的走往下一步，專心的唱著每一首歌，那樣就好。又一次，我進到了麥當勞，開啟筆電記錄著自己的旅程，寫下那些所思所感。</div>
 <div class="draft-block draft--p left">2019年7月22日，午夜2點20分，我搭上了往慕尼黑的夜巴，結束了我整整10週，橫跨芬蘭、挪威、瑞典、丹麥、德國5國，共計搭了117輛便車，總里程達7千公里的旅程。</div>
 <div class="draft-block draft--p left">儘管搭便車的成績無須拿來說嘴，那不過是伸出大拇指站在那的結果罷了。真正值得讚許的，永遠是那些願意為了便車客停留的車主們，與他們那熱心為善的靈魂。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/7073a2c0-ee1e-47e8-908c-6edf9ebe6a24.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/7073a2c0-ee1e-47e8-908c-6edf9ebe6a24.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
