--- a/_posts/2022-05-14-INMEDIA-中國棄辦2023年亞洲盃決賽週-國足主力微博貼心碎emoji.html
+++ b/_posts/2022-05-14-INMEDIA-中國棄辦2023年亞洲盃決賽週-國足主力微博貼心碎emoji.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/15_12.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 原定明年6月在中國舉行的2023年亞洲盃決賽週賽事，亞洲足協<a href="https://www.the-afc.com/en/national/afc_asian_cup/news/important_update_on_afc_asian_cup_2023%E2%84%A2_hosts.html">宣布</a>由於新冠疫情，中國已放棄主辦該項賽事。在公布後，國足主力球員張玉寧在新浪微博發帖：💔，即心碎的emoji。</p>
-<p>在此之前，原定今年在杭州及成都舉行的亞運會、世界大學生夏季運動會亦宣布延期，原定今年7月同由中國主辦的東亞盃亦改為在日本舉行，在中國主辦的國際體育賽事近乎全數清零。</p>
+<p>在此之前，原定今年在<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%9D%AD%E5%B7%9E%E4%BA%9E%E9%81%8B%E5%BB%B6%E6%9C%9F%E6%98%8E%E5%B9%B4%E8%88%89%E8%A1%8C-%E9%9C%8D%E5%95%9F%E5%89%9B%EF%BC%9A%E6%89%93%E4%BA%82%E9%81%8B%E5%8B%95%E5%93%A1%E9%83%A8%E7%BD%B2">杭州</a>及成都舉行的亞運會、世界大學生夏季運動會亦宣布延期，原定今年7月同由中國主辦的東亞盃亦改為在日本舉行，在中國主辦的國際體育賽事近乎全數清零。</p>
 <p>亞洲盃中國組委會在新浪微博發文，指因為疫情，目前難以應對明年舉行的賽事，即按完全開放的模式舉行賽事。在亞洲足協及中國足協商討後，決定「易主」，亞洲足協稍後將確認新的比賽地點。</p>
 <p>亞洲盃決賽週賽事原定明年6月16日至7月16日進行，在中國全國10個城市，包括北京、天津、上海、重慶、成都、西安、大連、青島、廈門和蘇州舉行賽事，其中多座球場均為今次賽事而興建及翻新，包括北京工人體育場、泰達足球場、白鷺體育場和梭魚灣足球場等。</p>
 <p>亞洲盃決賽週的賽事將會有24個國家或地區代表隊參加，香港已殺入第三輪外圍賽的分組賽，賽事以賽會制形式，六月在印度加爾各答舉行，將硬撼阿富汗、柬埔寨及印度。</p>
