--- a/_posts/2022-05-14-VOCUS-劇-風起隴西-竄改的原著價值觀.html
+++ b/_posts/2022-05-14-VOCUS-劇-風起隴西-竄改的原著價值觀.html
@@ -9,7 +9,7 @@ author: 波波先生
 ---
 
 <div class="draft-block draft--p center"><br><span style="font-weight: bold; ">（涉及劇情內容）</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1500px" class="image-block-prerender" data-src="https://images.vocus.cc/04d4a2b1-dc34-431a-8a3f-3655b5b27af9.jpg" data-width="1500" data-height="2250" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/04d4a2b1-dc34-431a-8a3f-3655b5b27af9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">因為當初看電視劇《長安十二時辰》蠻喜歡的，馬伯庸的書改編加上陳坤跟白宇主演，就非常期待的看了第一集。</div>
 <div class="draft-block draft--p left">首先，是感覺很陽春的人物角色文字提醒，雖然在人物眾多的三國劇情中蠻有必要的，但呈現方式就是有一種陽春感；第二，背景音樂聲音的大小及進入的時間點很突兀。這兩點讓我萌生半放棄的想法，但由於馬伯庸的書過去看了《古董局中局》，覺得應該有一定的水準，所以決定回過頭先看《風起隴西》的原著，觀察一下收視率再看看要不要繼續下去。</div>
 <div class="draft-block draft--p left">看完書的當下，就決定要看劇了。因為看了第一集，所以知道陳坤所飾演的是書中哪一個角色，但由於貫徹書中的人物是荀詡，反而陳恭出場的不多，所以我還蠻好奇，編劇會怎麼把書中三塊故事線統整到雙男主身上去。</div>
@@ -22,4 +22,3 @@ author: 波波先生
 <div class="draft-block draft--p left">一直很喜歡歷史題材作品很大的一個原因是我覺得，留下的記錄只是一個面相，然而我們卻可以用很多不同的角度去解釋、揣測，無論是從事件本身、抑或是人物。探討的目的有時候已經不是真實性，卻能夠引發需多思考，沒有對錯。</div>
 <div class="draft-block draft--p left">借鏡歷史有時候，與其說是借鏡那些經驗，不如說是在這麼多歷史事件中如此多人來來去去，演繹他們的人生，那我們自己，透過了解他們又選擇如何活著？</div>
 <div class="draft-block draft--p left">面對這部劇，起碼我不想要活在改動這種價值觀的社會。</div>
-<div class="draft-block draft--p left"></div>
