Update VOCUS 2022-05-16 patch

--- a/_posts/2022-05-15-VOCUS-為什麼你退給亞馬遜的貨有可能被扔了.html
+++ b/_posts/2022-05-15-VOCUS-為什麼你退給亞馬遜的貨有可能被扔了.html
@@ -9,7 +9,7 @@ author: 鱸魚
 ---
 
 <div class="draft-block draft--p left">去年我在亞馬遜購物 40 次，退貨 5 次，這是 12.5% 的退貨率。退貨的原因不盡相同，一個是不喜歡，4 個是出現問題。我算是謹慎的消費者，可能引發退貨的產品都已盡量避免，是個懶得挑剔的 C 咖購物族，所以我的退貨率遠低於電商市場平均值。電商平均退貨率是 25%，是實體店的 3 倍，這是網路時代的新悲劇。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3000px" class="image-block-prerender" data-src="https://images.vocus.cc/75b9dbdf-0874-4aba-88d7-4b4443292eeb.jpg" data-width="3000" data-height="1944" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by ANIRUDH on Unsplash</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/75b9dbdf-0874-4aba-88d7-4b4443292eeb.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by ANIRUDH on Unsplash</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-9kobr">網購時代的悲劇</h2>
 <div class="draft-block draft--p left">電商業有這麼高的退貨率，是因為他們想盡辦法讓你先買再說，又把退貨手續優化到沒有後顧之憂。我退的貨有些已經用了一個月，包裝早就不見了。有一個玻璃銅框蜂鳥餵食器使用兩個多月後開始漏糖水，因為是聖誕購物季，退貨窗口長達 3 個月，亞馬遜仍舊准許我用塑膠袋提著商品送到退貨地點，二話不說，不到 10 秒鐘就完成退貨手續，地址運費包裝全免，也不查證商品是否損毁，或是不是原先購買的商品。也許我放幾雙舊拖鞋他們也照收。亞馬遜就這麼信任消費者，把退貨簡化到全世界都是君子。走出來的時候我覺得沾沾自喜，但也有一種莫名的罪惡：用了兩個月的舊貨會有人買嗎？不過這不干我事，我只不過是個被照顧得服服貼貼的消費者。</div>
 <div class="draft-block draft--p left">這是高招，坐在電腦前面所有商品摸不到看不到，而人們卻還勇敢地按下確認鍵，背後的關鍵就是：退貨免費又容易。消費者越沒有後顧之憂，下單就越瀟灑，不喜歡再退嘛⋯⋯這是亞馬遜成功最大的原因。</div>
@@ -18,7 +18,7 @@ author: 鱸魚
 <div class="draft-block draft--p left">天下沒有白退的貨。這筆免費的帳早都算在消費者身上了，不過這還是小事，更糟的是對地球而言這從來不是免費──電商業近三成的退貨最後都給埋了。上述的蜂鳥餵食器已經骯髒不堪，也不可能測試是否真漏水。另外幾個商品都是類似情況，不可能花人工檢試，也不可能放回貨架上。我說有問題他們就得相信，剩下的就是如何面對一個無法再賣的商品。</div>
 <div class="draft-block draft--p left">這些產品最後可能的歸途就是：埋了⋯⋯而且可能是整合轉運幾百公里留下一路碳足跡之後，才送進掩埋場。下場更慘的是有能源轉換價值的就送去燒了──說得好聽㸃，是把廢物轉換成火力發電能源。 仔細想想這些廢物裡面有多少材質會釋放出有毒氣體 ？現在的民生用品哪裡看不到塑膠的蹤影？這甚至比掩埋還要糟糕 。</div>
 <div class="draft-block draft--p left">這種事不斷重複發生著，光是在美國每年就有 60 億磅的退貨給埋了，其中半數來自亞馬遜。數字太大沒人懂，換個老少皆知的方式吧：一架波音747全貨機的載貨量大約是 25萬磅，這相當於每年「兩萬四千架」滿載退貨的 747 專機飛往掩埋場⋯⋯也就是一天 66 架次，全年無休，從不打烊。而這還只是美國而已。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5472px" class="image-block-prerender" data-src="https://images.vocus.cc/861fb7c8-fea7-4c37-9b15-ea91fe42a5bd.jpg" data-width="5472" data-height="3648" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by Hermes Rivera on Unsplash</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/861fb7c8-fea7-4c37-9b15-ea91fe42a5bd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by Hermes Rivera on Unsplash</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-5cm4l"><span style="font-weight: bold; ">沒有反向物流的電商時代</span></h2>
 <div class="draft-block draft--p left">為什麼要丟棄呢？背後的原因很複雜。主要是電商物流只管出，不管收。這是一條效能極高的單行道，每一家電商的業績都是跟著銷售走，只看出貨不看退貨，沒人衡量退貨的效能，退貨所發生的一切也很少有人在乎。亞馬遜 Prime 從下單、包裝、出貨，上車、轉運、最後幾乎不論住哪裡都能準時送到每一個大門口⋯⋯這樣一個完整的程序鏈必須要在 48 小時之內完成，斤斤計較不能出錯。這是現代科技的奇蹟，但沒人願意為反向物流投資，回程沒人問也沒人管。就像一盆潑出去的水，沒人知道要怎麼收回。</div>
 <div class="draft-block draft--p left">反向物流成本是平均商品售價的 6 成，這種䀚貴的反流程也造就了不幸的退貨文化：丟棄最划算。</div>
@@ -33,10 +33,10 @@ author: 鱸魚
 <div class="draft-block draft--p left">即使選擇論重量拍賣，垃圾中找黃金的包商也是只挑好的，剩下的還是當垃圾扔了。不划算的物流，不論搬到哪都不划算。當然亞馬遜也許叫你留著商品。曾經有一次退貨他們叫我留著。別搞錯了，這不是大方，而是省得麻煩。那是醫療品，收回去必是丟棄。</div>
 <div class="draft-block draft--p left">不過叫客人留著，省了反向物流的麻煩，卻可能變相鼓勵詐欺，所以大部分情況都是寧可收回去再丟棄，也比送給消費者便宜。</div>
 <h2 class="draft-block draft--h2" name="header-47vn">退回的時尚 ＝廢棄時尚</h2>
-<div class="draft--imgNormal draft-block"><div><div style="height:4272px" class="image-block-prerender" data-src="https://images.vocus.cc/60a5f61e-5542-48cf-b597-d3e0ec07431b.jpg" data-width="4272" data-height="2848" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by Sean Benesh on Unsplash</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/60a5f61e-5542-48cf-b597-d3e0ec07431b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Photo by Sean Benesh on Unsplash</figcaption></div>
 <div class="draft-block draft--p left">亞馬遜也可能把退回的時尚「捐給」慈善機構，當作二手衣出售。這也是一道省得麻煩的義舉。只是慈善機構並非垃圾場，美國人挑剩的二手衣，最後都轉送到第三世界讓他們去挑。這樣的慈善義舉之下，70% 的二手衣在千里迢迢運送了一萬多公里之後，仍舊還是埋了、或燒了。不同的只是葬身在第三世界，美國人看不到、聞不到而已。第一世界看不上的垃圾，第三世界也未必看得上。</div>
 <div class="draft-block draft--p left">非洲的肯亞已經成為全世界廢棄時尚的掩埋中心。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=elU32XNj8PM"></div>
+<iframe src="https://www.youtube.com/embed/elU32XNj8PM" width="720px" height="360px"></iframe>
 <h2 class="draft-block draft--h2" name="header-dhoui"><span style="font-weight: bold; ">退貨從非免費</span>──<span style="font-weight: bold; ">問地球就知道</span></h2>
 <div class="draft-block draft--p left">網路時代消費者被賦予空前的退貨權柄，點擊一下就可以讓不喜歡的商品消失，一毛不用出也没人查證；商家也可以點擊一下就讓頭痛從會計簿上抵銷。這種成全大家眼不見為淨的俐落，卻帶來史無前例的浪費與污染。</div>
 <div class="draft-block draft--p left">美國每年退貨總排碳量相當於 3 百萬輛汽車一年的空污。別忘了，這是一個完整的輪迴，丟棄的商品生前也是經過研發、原料採集、運送，生產、包裝、送到出貨中心，再輾轉送到消費者門口。這一路的艱辛在一個點擊之後，立刻反轉過來再走一趟<span style="font-weight: bold; ">。</span>而這次是送入毁滅。人類製造了再丢棄，一來一往都留下不可抹滅的碳痕，用掉的全是地球的共同成本。這就是高效能電商時代所孕育出來的購物文化。</div>
