--- a/_posts/2022-05-15-INMEDIA-專訪-港足五人代表未忘職業夢-梁星耀-衰咗三年只係等一個機會.html
+++ b/_posts/2022-05-15-INMEDIA-專訪-港足五人代表未忘職業夢-梁星耀-衰咗三年只係等一個機會.html
@@ -36,7 +36,7 @@ author: 獨媒報導
 <p>2020年6月離開大埔，高俊基喚他來深水埗練習，「高sir 佢對我幾好，算係咁。」幸運之神沒有忘記梁星耀，在一年多前，梁星耀在偉智街球場，重遇港足五人隊教練陳飛達。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/43H989" title="DSC_3402"><img src="https://live.staticflickr.com/65535/52053442821_54b75c744a_z.jpg" width="640" alt="DSC_3402" /></a></p>
 <p><strong>重操故業踢五人足球  「都叫係代表香港」</strong></p>
-<p>飛達sir跟他說，五人隊重組，兩名老大哥蘇來強、黃展鴻退役。梁星耀重操故業，他很珍惜五人隊的訓練機會。今次首次獲徵召入伍，期待程度十粒星，「始終都叫代表香港，十一人代表唔到，五人都叫係代表香港吧。」「五人足球節奏快，上落速度高，我幾鍾意呢種感覺。」</p>
+<p>飛達sir 跟他說，港足五人隊重組，兩名老大哥蘇來強、黃展鴻退役。梁星耀重操故業，他很珍惜五人隊的訓練機會。今次首次獲徵召入伍，期待程度十粒星，「始終都叫代表香港，十一人代表唔到，五人都叫係代表香港吧。」「五人足球節奏快，上落速度高，我幾鍾意呢種感覺。」</p>
 <p>「個季搞成咁，你有無諗不如唔好再搞咁多嘢，唔好踢職業足球了？」梁星耀未待記者問完，便聲如洪鐘：「無，梗係無！因為疫情同傷患完，好唔甘心，自己未去到話差到立唔到足囉。」</p>
 <p><strong>有一種決心叫唔甘心  兩年限期追夢</strong></p>
 <p>然而，客觀現實是香港足球大環境不佳，港超球隊數目勉強湊夠八隊。疫情下，足球員變成外賣員、運輸、地盤比比皆是，為生活，半點不由人。</p>
@@ -44,6 +44,6 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/L6LxV3" title="DSC_3365"><img src="https://live.staticflickr.com/65535/52053922895_2ca4a16465_z.jpg" width="640" alt="DSC_3365" /></a></p>
 <p>邊返兼職邊踢業餘波，聽落輕輕描淡寫，付出的時間、精神和體力，或者較職業球員還要多。「你有無諗過其實係唔得？」對於記者連番追問，梁星耀終於沉一沉，他摸了摸頭皮，想了想說，「唔到自己控制嘅，時也命也吧，始終宜家球隊唔多，又無積落啲人脈，唯有努力啲做好自己，總有人睇到嘅。」這種決心，叫唔甘心。</p>
 <p>「返全職？真係未係時候。」這名容易受傷的男人有想過重投平凡，唸張教育文憑，安守本份做個教師。梁星耀給了自己兩年限期，「畀我再捱多一陣，我仲想追夢，想專心同健健康康咁踢一季港超。」</p>
-<p>有傳深水埗來季將升上港超聯，梁星耀對記者透露，曾親自向高俊基探口風，「高sir 話隊波有成績先，有成績就有得傾下」，「點都好，我有同佢我準備好。」</p>
+<p>有傳深水埗來季將升上港超聯，梁星耀對記者透露，曾親自向高俊基探口風，「高sir 話隊波有成績先，有成績就有得傾下」，「點都好，我有同佢講我準備好。」</p>
 <p>記者：麥馬高、周頌謙</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
