--- a/_posts/2022-05-15-INITIUM-当-大白-遭遇-宪法-上海疫情中的法治假面.html
+++ b/_posts/2022-05-15-INITIUM-当-大白-遭遇-宪法-上海疫情中的法治假面.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「有了这次被民众引用法律反驳的经验，当局会肯定通过修改法律或者颁布“解释”扩大警察权力的必要。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220516-opinion-law-issue-shanghai/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/1ebc7c7355a14a85bbe7cfc4b6971314.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月4日，上海，疫情期间，一名身穿防护衣的人在住宅区的屏障后。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年5月4日，上海，疫情期间，一名身穿防护衣的人在住宅区的屏障后。<span class="credit">摄：Aly Song/Reuters/达志影像</span></figcaption></figure><p>新冠疫情之下，上海经济与民生停摆至今，已是民怨沸腾。作为中国最发达的城市，上海拥有领先全国文化程度和法律意识的市民。于是，上海市的严苛封禁措施便不可避免地引发了对中国严厉防控措施合法性的质疑。</p>
+            <figcaption itemprop="caption">2022年5月4日，上海，疫情期间，一名身穿防护衣的人在住宅区的屏障后。<span class="credit">摄：Aly Song/Reuters/达志影像</span></figcaption></figure><p>疫情之下，上海经济与民生停摆至今，已是民怨沸腾。作为中国最发达的城市，上海拥有领先全国文化程度和法律意识的市民。于是，上海市的严苛封禁措施便不可避免地引发了对中国严厉防控措施合法性的质疑。</p>
 <h2>“紧急状态”之问</h2>
 <blockquote>
 <p>由于普通的防疫人员并不具备强制执法能力，与防疫人员一样身著“大白”防护服的公安警察便成为执行防控政策主要的暴力力量。</p>
