--- a/_posts/2022-05-15-PQ-芬蘭瑞典欲加入北約-土耳其-不看好-俄羅斯揚言核武報復.html
+++ b/_posts/2022-05-15-PQ-芬蘭瑞典欲加入北約-土耳其-不看好-俄羅斯揚言核武報復.html
@@ -20,7 +20,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1024x683.jpg" alt="" class="wp-image-101242" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐盟和北約成員國分布圖（圖／報呱製圖）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1024x683.jpg" alt="" class="wp-image-101242" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/96179e83-natoeurenew.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐盟和北約成員國分布圖（圖／報呱製圖）</figcaption></figure>
 
 
 
