--- a/_posts/2022-05-15-INMEDIA-東鐵過海-千人衝頭班有人甩鞋-羅先生獲港鐵護送入場高歌好興奮.html
+++ b/_posts/2022-05-15-INMEDIA-東鐵過海-千人衝頭班有人甩鞋-羅先生獲港鐵護送入場高歌好興奮.html
@@ -32,4 +32,4 @@ author: 獨媒報導
 <p>另外，港鐵職員今早安排傳媒使用扶手電梯進入東鐵綫月台時，電梯突然急停，有職員解釋可能出現技術問題，著記者稍等勿躁。港鐵車務總監李家潤承認會展站曾發生扶手電梯運作不暢順的情況，惟其後已恢復正常。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/KN4447" title=" "><img src="https://live.staticflickr.com/65535/52074035758_c4a1b6de5c_b.jpg" width="1024" alt=" " /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/698Ls2" title="無標題"><img src="https://live.staticflickr.com/65535/52073904074_5bbdb66c35_b.jpg" width="1024" alt="無標題" /></a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
