--- a/_posts/2022-05-14-INITIUM-tiktok的工作文化-焦虑-保密-无尽的压力.html
+++ b/_posts/2022-05-14-INITIUM-tiktok的工作文化-焦虑-保密-无尽的压力.html
@@ -14,7 +14,7 @@ author: 华尔街日报
 <p>但据TikTok美国办公室的员工说，推动TikTok成功的，是严苛的管理风格和高要求的内部文化，完全背离平台愉悦鼓舞的公众形象。</p>
 <p>这些员工中有许多都曾供职于其他大型科技公司，他们说，TikTok一味强调效率和保密，其程度之甚，在业内并不多见。</p>
 <p>随著TikTok继续保持高增长，上述情况日益助推著TikTok美国办公室的紧张气氛。TikTok是总部位于北京的字节跳动科技有限公司（ByteDance Ltd.）的子公司。据市场研究公司Sensor Tower，截至2022年第一季度，六年前创立的TikTok已在所有类型应用程式中创下了下载量最高的纪录。</p>
-<p>截至2020年年中，TikTok美国业务部约有1,500名员工，该公司去年表示，希望将这一数字增加至10000人。他们的工作内容主要围绕将在中国开发的产品转化为面向美国受众的产品，同时开拓商机可观的美国广告市场。从工作文化融合的角度来看，TikTok正在进行最大胆的尝试，它需要连接全球两大科技强国。</p>
+<p>截至2020年年中，TikTok美国业务部约有1,500名员工，该公司去年表示，希望将这一数字增加至10000人。他们主要将在中国开发的产品转化为面向美国受众的产品，同时开拓商机可观的美国广告市场。从工作文化融合的角度来看，TikTok正在进行最大胆的尝试，它需要连接全球两大科技强国。</p>
 <p>TikTok美国业务的总部设在洛杉矶，这里的一些员工抱怨称，他们常常睡眠不足，而且周末频繁加班，必须与地球另一端的同事开会，就导致这种情况更加严重了。</p>
 <p>有几个该公司的美国前员工说，他们在TikTok工作期间，平均每周要开85个小时的会，而且还要挤出额外的时间来完成自己的工作。另一人说，他在提供了医学实验室检查结果、证明自己的身体状况危及生命后，才说服老板不再让他连续熬夜工作。</p>
 <p>一些前员工提到，他们经历了严重的体重波动、压力或是情绪低谷，以至于到了得寻求治疗的地步。一名前员工说，巨大的压力让她不敢缺席TikTok一场紧接著一场的会议，她甚至不敢中途走开去换卫生棉条，以至于血浸湿了裤子。</p>
