Update VOCUS 2022-05-17 patch

--- a/_posts/2022-05-16-VOCUS-bond,-my-name-is-bon...pierce-brosnan.html
+++ b/_posts/2022-05-16-VOCUS-bond,-my-name-is-bon...pierce-brosnan.html
@@ -32,12 +32,9 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">我很喜歡皮爾斯在《誰與爭鋒》裡的一幕過場，「龐德」在英國與北韓換俘，平安獲釋後，被強制護送到香港接受調查，但他選擇跳船離開，又狼狽不堪、衣不蔽體的於「帆船俱樂部」現身，引來了旁人側目。好不容易，櫃臺領班認出來眼前這位滿臉落腮鬍的遊民，其實不是別人，正是他們的常客加貴賓，</div>
 <h2 class="draft-block draft--h2" name="header-dd3k8">「總統套房」！</h2>
 <div class="draft-block draft--p left">下一幕，換上招牌的西裝禮服，梳洗乾淨的「龐德」終於回來了。<span style="font-weight: bold; ">情報員的世界，沒有永遠的失敗，只有短暫的落難；想想，人生亦然。（怎麼感性起來了！）</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=0f_NsAzr9FU"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/watch?v=0f_NsAzr9FU" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">值得一提的是，於西元2004年9月時取得美國公民，同時定居在風光明媚夏威夷的皮爾斯，為了不讓自己被外界定型為純龐德演員，故也在龐德合約的空檔期間，參與多部電影主角或是製作人的工作；而在光榮接棒克雷格（Daniel Craig）之後，舉凡《獵殺幽靈寫手》（The Ghost Writer，2010）、《特務交鋒》（The November Man，2014）與《倒數行動》（Survivor，2015）等，皮爾斯表現亦同樣亮眼喔。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=WrvkY6rAgHU"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/watch?v=WrvkY6rAgHU" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">至於即將上映的DC擴展宇宙（DC Extended Universe）電影：《黑亞當》（Black Adam），除巨石強森（Dwayne Johnson）擔任男主角外，<span style="font-weight: bold; ">皮爾斯也將以穿上「動作捕捉服」（Motion capture）的特殊方式，飾演「命運博士」（Doctor Fate）。</span></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Pierce_Brosnan" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Pierce_Brosnan</a></div>
