--- a/_posts/2022-05-16-VOCUS-也談中國-趕俄超烏-的軍事宣傳.html
+++ b/_posts/2022-05-16-VOCUS-也談中國-趕俄超烏-的軍事宣傳.html
@@ -8,4 +8,16 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說在烏克蘭戰爭爆發後，俄羅斯拙劣的表現，讓世人驚覺，原來俄軍早就已經變成一支三流部隊，俄製武器既不先進，也不可靠。而烏克蘭長期不重視國防建設，三軍都使用更老舊的俄式裝備。兩方在戰場上的表現，像是二戰時期的陣地戰，距離今日大家所認知的高科技戰爭，有著遙遠的距離。讓無疑讓中國感到十分尷尬，因為俄羅斯與烏克蘭是中國重要的軍事武器與科技輸入國，如果俄羅斯與烏克蘭如此不堪，那又怎麼繼續吹噓解放軍已經是世界首屈一指的軍隊？</p>
+<p>為了處理這個窘境，這一陣子中國的外圍宣傳媒體開始轉變風向，紛紛宣稱中國的軍事實力早就超越俄羅斯，現在是俄羅斯要求中國輸出武器協助俄軍，烏克蘭的技術能力更是遠遠不及中國，之前還要求中國前往烏克蘭投資。但事實真的是如此嗎？如果記憶力不是太差的話，應該都記得在烏克蘭戰爭爆發之前，國際間重要的軍事新聞之一，是俄羅斯終於開始運交中國所訂購的S-400防空飛彈。中國是在2014年，與俄羅斯簽署採購合約，引進這款新型防空飛彈，總金額達30億美金，原訂從2018年開始交付。</p>
+<img src="https://images.vocus.cc/c9b52412-2c5d-4bd8-980f-8128803264e6.png" alt="S-400防空飛彈是改良自 S-300，而中國的紅旗-9型就是仿製自S-300。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">S-400防空飛彈是改良自 S-300，而中國的紅旗-9型就是仿製自S-300。</figcaption>
+<p>但俄羅斯在2018年運送首批S-400給中國時，因為貨輪遇上大風浪，導致船上運送的S-400系統受損，而被迫返回俄羅斯，受到國際媒體的廣泛報導。稍後的第二批S-400則在2019年交付給中國。在經過一段時間的接裝訓練後，這批飛彈很有可能部署在東南沿海地區，威脅台灣。由於S-400的增程型飛彈，射程號稱高達400公里以上，而讓中國媒體吹噓，一旦S-400部署完成，台灣的戰機只要一起飛，就處於被攻擊的狀態中，這樣的恫嚇文章，仍充斥在網路上，怎麼才一轉身就開始說俄羅斯早就遠遠落後於中國了？</p>
+<p>同樣的情況還有Su-35戰機。中國是在2015年，以25億美元的天價，向俄羅斯採購了24架的Su-35戰機，由於當時中國的殲-20已經宣布試飛成功，並開始小批量生產服役，因此還在中國社會引起渲然大波。許多中國人認為沒有必要再向俄羅斯採購這批戰機。不過整體來說，Su-35在許多關鍵技術上，仍然遠勝於中國當時的國產戰機，因此這個決定算是頗為務實。俄羅斯從2017年開始交付，最後一批在2019年抵達中國。可以這麼說，俄羅斯的S-400與Su-35開始在中國服役還不滿3年時間，仍是最新、最強的裝備。</p>
+<img src="https://images.vocus.cc/9debc924-ed65-4abf-be86-e26895b5c662.png" alt="Su-35戰機在烏克蘭戰場上的表現並不突出，甚至還留下被擊落的記錄。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">Su-35戰機在烏克蘭戰場上的表現並不突出，甚至還留下被擊落的記錄。</figcaption>
+<p>現在就說俄羅斯已經遠遠落後於中國，無疑是自欺欺人之語。雖然S-400在烏克蘭戰場的表現，的確差強人意，竟然無法有效壓制孱弱的烏克蘭空軍，實在跌破大家的眼鏡。不過最大的苦主還不是中國，而是為了採購S-400而與美國鬧翻的土耳其。嚴格來說，土耳其堅持採購S-400並不是雙方關係陷入僵局的原因，而是結果。是因為政治上的原因，讓土耳其總統艾爾多安決定要拉攏俄羅斯來制衡美國。但採購S-400讓美國祭出中止交付F-35戰機的嚴厲制裁，現在土耳其發現俄製的S-400性能竟如此不堪，恐怕是悔不當初。</p>
+<p>除了武器以外，中國也持續向俄羅斯採購航空引擎與雷達零件，這並不是什麼秘密。特別是運-20所使用的D-30KP-2，採購的數量最多，因為新型的轟-6也是採用同款引擎。中國正在全力生產運-20與新型的轟-6，以取代老舊的運輸與轟炸機隊，這也代表D-30KP-2的採購數量並不少。雖然中國也在全力仿製這款航空引擎，但在中國自製的航空引擎仍不成熟下，只有少數的運-20採用中國國產的航空引擎，以進行測試，多數仍使用俄羅斯的航空引擎，這其實是較安全的一種策略，卻也讓中國必需繼續依賴俄羅斯的技術。</p>
+<p>中國當然也希望能擺脫這樣的困境，因此積極從烏克蘭引進航空與船舶引擎的技術，希望達成國產化的目標。最後甚至想要收購烏克蘭專門生產航空引擎的馬達西奇公司，無奈這樣的計畫，被美國施壓擋下，但是烏克蘭仍然持續提供大量的軍事技術給中國。在2021年，中國還向烏克蘭採購了高達400具的航空引擎，但隨著俄烏戰爭爆發，這筆訂單恐怕已無法交付。而且除了航空引擎外，中國還繼續向烏克蘭採購太空火箭與航電系統的技術，對中國的航天發展計畫，有非常大的幫助。</p>
+<p>中國大量從俄羅斯與烏克蘭輸入軍事武器與技術，在烏克蘭戰爭爆發前，是眾人皆知之事，現在突然宣稱中國早已經「趕俄超烏」，未免太過可笑。若更進一步來說，烏克蘭戰爭證實了過去的猜測，俄系武器在許多方面都已經遠遠落後於世界。這其實也不難理解。前蘇聯解體的1991年，正好是資訊科技開始快速發展的時刻，俄羅斯卻陷入失落的20年，剛好錯過了這段發展時期，導致軍事技術的發展停滯不前。在烏克蘭戰場上撿到不少未引爆的俄羅斯飛彈，結果發現裡面的電子零組件，幾乎落後西方世界二十年。</p>
+<p>中國其實也非常清楚這樣的狀況，所以積極從歐洲引進技術，甚至連民用技術也不放過，因為就連西方的民用電子技術，也比俄羅斯或烏克蘭還要先進。中國的觸角遍布歐洲各國，但最主要鎖定德國與法國，常以民用的名義，輸入技術或零件供解放軍使用。也利用竊取的方式，取得各種受到管制的軍用技術或零件。中國有組織、有計畫地在歐美各國進行這種間諜行動並不是新聞。中國若說利用這種鑽漏洞與竊取的方式，所取得的關鍵技術，已逐步超越俄羅斯與烏克蘭，或許還有幾分的說服力。</p>
