--- a/_posts/2022-05-16-INMEDIA-消委會指九成香腸含高鈉-廚師牌雞肉腸等3款檢出含禁用獸藥.html
+++ b/_posts/2022-05-16-INMEDIA-消委會指九成香腸含高鈉-廚師牌雞肉腸等3款檢出含禁用獸藥.html
@@ -18,7 +18,7 @@ author: 獨媒報導
 <p>而最高總脂肪含量的為TOPVALU 的JAS特級 Coarse-ground Pork Sausages（Coarsely Ground Wiener Sausages），其產地為日本；最低總脂肪含量則為BILINSKI’S Organic Wild Mushroom with Italian Herbs-fully cooked chicken sausage。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/s6nB21" title="螢幕截圖 2022-05-16 下午1.07.48"><img src="https://live.staticflickr.com/65535/52076988729_ca166e4bd8_z.jpg" width="640" alt="螢幕截圖 2022-05-16 下午1.07.48" /></a></p>
 <p><strong>三款香腸含呋喃西林代謝物 消委會轉交食安中心跟進</strong></p>
-<p>在食物安全測試中，三款香腸被檢出含呋喃西林代謝物氨基脲的御品皇密糖雞尾腸、alfresco的Spicy Jalapeno with jalapeno’s and roasted peppers Chicken Sausage - fully cooked和廚師牌高級雞肉腸，檢出量分別為每公斤4.0微克、6.1微克及14微故，消委會已將相關結果轉交食安中心跟進。消委會表示，現時仍未有足夠資料確認呋喃西林對人類的影響和致癌性，並有效用於治療局部感染和導尿管塗層。</p>
+<p>在食物安全測試中，三款香腸被檢出含呋喃西林代謝物氨基脲的御品皇密糖雞尾腸、alfresco的Spicy Jalapeno with jalapeno’s and roasted peppers Chicken Sausage - fully cooked和廚師牌高級雞肉腸，檢出量分別為每公斤4.0微克、6.1微克及14微克（歐盟標準為1微克），消委會已將相關結果轉交食安中心跟進。消委會表示，現時仍未有足夠資料確認呋喃西林對人類的影響和致癌性，並有效用於治療局部感染和導尿管塗層。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/J1AD5W" title="螢幕截圖 2022-05-16 下午12.59.08"><img src="https://live.staticflickr.com/65535/52076974144_f2ccfac8a3_z.jpg" width="640" alt="螢幕截圖 2022-05-16 下午12.59.08" /></a></p>
 <p>本港現時未有法例規管含呋喃西林及其代謝物的行動水平，建議當局參考歐盟做法，修訂法例予以規管，保障市民健康，和識生產商有明確法例可依。</p>
 <p><strong>兩款煙燻香腸具多環芳香烴 未有超歐盟限制量</strong></p>
