--- a/_posts/2022-05-16-PQ-國民黨內鬥-羅智強辭議員選桃園市長-呂玉玲-和桃園沒淵源.html
+++ b/_posts/2022-05-16-PQ-國民黨內鬥-羅智強辭議員選桃園市長-呂玉玲-和桃園沒淵源.html
@@ -24,7 +24,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。.jpg" alt="" class="wp-image-101463" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-300x300.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-768x768.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>羅智強：我一定贏！圖／羅智強臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。.jpg" alt="" class="wp-image-101463" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-300x300.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/3cf9aadc-羅智強：我一定贏！圖／羅智強臉書。-768x768.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>羅智強：我一定贏！圖／羅智強臉書。</figcaption></figure></div>
 
 
 
