--- a/_posts/2022-05-16-INITIUM-晚报-加州橙县一座基督教堂遭枪手袭击-六名死伤者均为台裔侨民.html
+++ b/_posts/2022-05-16-INITIUM-晚报-加州橙县一座基督教堂遭枪手袭击-六名死伤者均为台裔侨民.html
@@ -14,7 +14,7 @@ author:
 <p>遇袭的台湾基督长老教会教堂位于橙县的拉古纳伍兹村，当地为退休人士社区。案发在当地周日下午，教会为迎接一位回来探望信众并主持崇拜的前任牧师而举行午餐聚会，约有30至40人在场。下午1时半左右，一名枪手突然闯入教堂，以铁链锁上大门后，以两把手抢对信众开火。信众合力将疑犯制服，并以电线将他捆绑，交由赶抵现场的警员作出拘捕。</p>
 <p>据台北驻洛杉矶经济文化办事处事后公布，一名陪同母亲参与崇拜的40多岁医生在尝试制服枪手时遭射杀，另外年龄介乎66岁至92岁的四男一女受伤，其中四人伤势严重。办事处证实，五名死伤者均为台湾侨民。</p>
 <p>橙县警方透露被捕疑犯为一名来自拉斯维加斯的68岁亚裔男子，但没有交代疑犯是否台湾裔。警方仍在调查疑犯的犯案动机，包括他与教会此前有没有任何连系、案件是否涉及仇恨犯罪等。谈及教会信众，橙县副警长哈洛克（Jeff Hallock）赞扬他们表现无比英勇，阻止了疑犯继续行凶，避免了更多伤亡。</p>
-<p><a href="https://www.cna.com.tw/news/aipl/202205160108.aspx">台湾外交部长欧江安对中央社表示</a>，台北驻洛杉矶经济文化办事处事后立即启动紧急应变计划，包括通过侨教中心、橙县华侨文教中心、侨务委员、当地社团及侨胞等渠道，持续了解相关资讯，并且与收容伤者的各家医院保持密切联系。另外，外交部已请驻洛杉矶办事处对伤亡侨民及其亲属致以慰问，同时持续了解家属的需求，并且即时提供协助。</p>
+<p><a href="https://www.cna.com.tw/news/aipl/202205160108.aspx">台湾外交部发言人欧江安对中央社表示</a>，台北驻洛杉矶经济文化办事处事后立即启动紧急应变计划，包括通过侨教中心、橙县华侨文教中心、侨务委员、当地社团及侨胞等渠道，持续了解相关资讯，并且与收容伤者的各家医院保持密切联系。另外，外交部已请驻洛杉矶办事处对伤亡侨民及其亲属致以慰问，同时持续了解家属的需求，并且即时提供协助。</p>
 <h3>乌军在顿巴斯地区战事上取得进展，成功将当地俄军迫返俄罗斯境内</h3>
 <p>乌克兰军方宣称在东部顿巴斯地区战事上取得重大进展。据乌军于当地周日（15日）发放的片段，他们已经成功将入侵顿巴斯地区的俄军迫退，更已推进至接壤俄罗斯的边境地区。</p>
 <p><a href="https://www.cbc.ca/news/world/ukraine-russia-war-may15-1.6454030">乌军在东部重镇伊久姆（Izium）周边发动反攻</a>，尝试收复战事以来被俄军用作关键补给据点的伊久姆。有分析指出，假如乌军成功收复当地，俄军将难以按计划在顿巴斯地区包围乌军。</p>
