--- a/_posts/2022-05-17-INMEDIA-蘋果日報案-裁判法院完成交付程序-排期高院處理.html
+++ b/_posts/2022-05-17-INMEDIA-蘋果日報案-裁判法院完成交付程序-排期高院處理.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/process.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>壹傳媒創辦人黎智英，以及《蘋果日報》六名前高層的兩宗國安法案件，今早在西九龍法院再提堂。案件由提堂至今將近一年，裁判法院今完成交付程序，呈交高等法院處理，黎智英和三間蘋果日報公司將會與其他6名前高層分開兩宗案件處理，日期有待高等法院排期。7名被告沒有保釋申請，繼續還柙。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/process.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>壹傳媒創辦人黎智英、《蘋果日報》6名前高層及3間公司的三宗國安法案件，今早在西九龍法院再提堂。案件由提堂至今將近一年，裁判法院今完成交付程序，呈交高等法院處理，黎智英和3間蘋果日報公司將會與其他6名前高層分開兩宗案件處理，日期有待高等法院排期。7名被告沒有保釋申請，繼續還柙。</p>
 <p>黎智英一共面對四項控罪，三項與《國安法》有關。三項國安控罪當中，一項指他串謀勾結蘋果其他高層勾結外國勢力危害國家安全，一項指他與陳梓華、Mark Herman Simon、李宇軒、劉祖廸及其他人，勾結外國勢力危害國家安全。黎智英獨立面對的一條勾結外國勢力罪，控罪日期則為2020年7月1日至2020年12月1日。黎將會與三間公司一同在高院處理。</p>
 <p><strong>黎智英面對4罪 前高層各面對2罪</strong></p>
 <p>六名前高層則面對一項串謀勾結外國勢力危害國家安全，以及一項串謀發布煽動刊物罪。</p>
