--- a/_posts/2022-05-17-INMEDIA-山道文化遭香港書展dq-楊子俊-另行籌辦港人書展.html
+++ b/_posts/2022-05-17-INMEDIA-山道文化遭香港書展dq-楊子俊-另行籌辦港人書展.html
@@ -13,6 +13,6 @@ author: 獨媒報導
 <p>曾參與<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E3%80%90%E6%9B%B8%E5%B1%95%E9%96%8B%E5%B9%95%E3%80%91%E7%A4%BE%E9%81%8B%E6%9B%B8%E5%A4%A7%E6%B8%9B-%E5%83%85%E5%B1%B1%E9%81%93%E6%96%87%E5%8C%96%E7%85%A7%E8%B3%A3-%E6%94%A4%E4%BD%8D%E4%BA%BA%E6%B5%81%E7%B5%A1%E7%B9%B9%E4%B8%8D%E7%B5%95">去年</a>香港書展的山道文化，今年一月尾亦有向貿發局申請參與今年書展。負責人楊子俊表示，公司早已繳交14萬元按金的支票。他稱貿發局在5月3日告知，可以參與5月6日攤位位置選擇會，惟在一日前獲告知因「技術問題」，被取消揀位。楊子俊稱曾向貿發局查詢，但對方未有講述更多原因。</p>
 <p>至昨（5月17日）晚六時，楊子俊收到貿發局電郵，指其申請不獲接納並退還按金。他今早曾致電貿發局查詢，但對方只稱申請被取消，未能交代更多詳情。</p>
 <p><strong>去年曾遭投訴</strong></p>
-<p>2021年書展，山道文化亦有參與香港書展，售賣的書籍包括柳俊江的《元朗黑夜》、楊子俊的《逆權教師》及《如水赴壑──香港歷史與意識之流》。建制團體「香港政研會」當時曾在網上指涉違法。楊子俊向《獨媒》透露，有警察在翌日早上到攤位檢查書籍，並表示書籍無問題。</p>
+<p>2021年書展，山道文化亦有參與香港書展，售賣的書籍包括柳俊江的《元朗黑夜》、《逆權教師》及《如水赴壑──香港歷史與意識之流》。建制團體「香港政研會」當時曾在網上指涉違法。楊子俊向《獨媒》透露，有警察在翌日早上到攤位檢查書籍，並表示書籍無問題。</p>
 <p>楊子俊表示，今年山道文化申請的攤位面積達113平方米，比去年為大，並已安排佈置和聯絡承建商，亦已準備一定貨量，以及切合書展人流的書籍。他批評貿發局突然取消攤位的做法不負責任，「如果你話我影響書展形象嘅，咁反而仲好，你話我知啦。」他稱雖然時間緊迫，但將籌辦民間的「香港人書展」，惟地點、日期和時間均未有定案，初步希望選址灣仔，重申大前題仍為合法地出版書籍。</p>
 </div></div></div>
