--- a/_posts/2022-05-17-PQ-美南加台灣教會槍擊案兇手疑為統促會理事-台美共同感念罹難鄭達志醫師.html
+++ b/_posts/2022-05-17-PQ-美南加台灣教會槍擊案兇手疑為統促會理事-台美共同感念罹難鄭達志醫師.html
@@ -8,7 +8,7 @@ tags: blog
 author: 謝時
 ---
 
-<p>位於美國南加州橘郡（Orange County）爾灣台灣基督長老教會（Irvine Taiwanese Presbyterian Church）在美國時間 2022 年 5 月 15 日下午驚傳槍擊事件，一名華裔人士持槍闖進教會禮拜後的聚餐現場並開槍，造成 1 死 5 傷。橘郡警方 16 日證實，在台灣人教會開槍的嫌犯，是 68 歲的內華達州華裔周文偉（David Wenwei Chou），而犯案動機是基於政治仇恨。根據網路資料比對，兇手極可能是美國「拉斯維加斯中國和平統一促進會」理事。</p>
+<p>位於美國南加州橘郡（Orange County）爾灣台灣基督長老教會（Irvine Taiwanese Presbyterian Church）在美國時間 2022 年 5 月 15 日下午驚傳槍擊事件，一名華裔人士持槍闖進教會禮拜後的聚餐現場並開槍，造成 1 死 5 傷。橘郡警方 16 日證實，在台灣人教會開槍的嫌犯，是 68 歲的內華達州華裔周文偉（David Wenwei Chou），而犯案動機是基於政治仇恨。根據網路資料比對，兇手極可能是<strong>美國「拉斯維加斯中國和平統一促進會」理事</strong>。</p>
 
 
 
@@ -16,11 +16,11 @@ author: 謝時
 
 
 
-<p>根據美國《華盛頓郵報》（The Washington Post）報導，這起針對台灣族群而來的「仇恨台灣槍擊事件」為預謀犯案，嫌犯為居住在內華達州拉斯維加斯市的華裔周文偉 —— 他除了被以聯邦仇恨犯罪罪名起訴之外，還犯下一級謀殺重罪和 5 項殺人未遂重罪。</p>
+<p>根據美國《華盛頓郵報》（The Washington Post）報導，這起針對台灣族群而來的「仇恨台灣槍擊事件」為預謀犯案，嫌犯為居住在內華達州拉斯維加斯市的華裔周文偉 —— 他除了被以聯邦【<strong>仇恨犯罪</strong>】罪名起訴之外，還犯下<strong>一級謀殺重罪</strong>和 <strong>5 項殺人未遂重罪</strong>。</p>
 
 
 
-<p class="pqpoint">加州橘郡警長巴恩斯（Don&nbsp;Barnes）16 日記者會上表示，凶嫌犯案動機是政治因素造成對台灣人心生不滿，他在座車內留有字條，內容以中文寫著<strong>「他對台灣人的仇恨」</strong>等字眼<strong>並堅信「台灣不是獨立國家」</strong>，他在現場還留有兩把犯案用槍械及汽油彈。巴恩斯還表示周文偉年輕住在台灣時就已經衍生仇恨台灣的想法。</p>
+<p class="pqpoint">加州橘郡警長巴恩斯（Don Barnes）16 日記者會上表示，凶嫌犯案動機是政治因素造成對台灣人心生不滿，他在座車內留有字條，內容以中文寫著<strong>「他對台灣人的仇恨」</strong>等字眼<strong>並堅信「台灣不是獨立國家」</strong>，他在現場還留有兩把犯案用槍械、數枚汽油彈及一把刀。巴恩斯還表示周文偉年輕住在台灣時就因在台灣不受到歡迎，而衍生仇恨台灣的想法。</p>
 
 
 
